--- a/index.html
+++ b/index.html
@@ -247,12 +247,13 @@
 </head>
 <body>
     <div class="container">
-        <div style="text-align: center; margin-bottom: 20px;">
+        <div style="text-align: center; margin-bottom: 5px;">
             <img src="img1.png" alt="Header Image" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
         </div>
         <div class="search-container">
             <input type="text" id="searchBox" class="search-box" placeholder="상품 검색...">
         </div>
+        <div style="font-size: 0.65rem; color: #666; text-align: center; margin-bottom: 2px;">* 이 게시물은 쿠팡 파트너스 활동의 일환으로 이에 따른 일정액의 수수료를 제공받습니다.</div>
         <div id="productContainer">
             <div class="loading">상품을 불러오는 중...</div>
         </div>
